# Xshade

./: .gitignore  CMakeLists.txt  README.md  Xshade  build.bat  setup.bat
config/: xshade.ini
shaders/: rtx_pixel.hlsl  rtx_vertex.hlsl  vanilla_pixel.hlsl  vanilla_vertex.hlsl
src/: application.cpp  main.cpp
src/config/: configuration.cpp
src/dll/: dx_hook.cpp  shader_compiler.cpp  shader_manager.cpp  xshade_core.cpp
src/include/: application.h
src/include/common/: types.h
src/include/config/: configuration.h
src/include/dll/: dx_hook.h  shader_compiler.h  shader_manager.h  xshade_core.h
src/include/injection/: process_manager.h
src/include/logging/: logger.h
src/include/ui/: settings_dialog.h  system_tray.h
src/injection/: process_manager.cpp
src/logging/: logger.cpp
src/ui/: settings_dialog.cpp  system_tray.cpp
